# trace-spec

./: CHANGELOG.md  CHARTER.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  spec_change.md
.github/workflows/: ci.yml  docs.yml  publish.yml  sbom.yml
docs/: quickstart.md
docs/integration/: cmcp.md
docs/stylesheets/: extra.css
docs/tutorials/: anchoring-to-the-registry.md  hardware-attestation-platforms.md  integrating-with-cmcp.md  verifying-the-audit-chain.md
schema/: trace-claim.json
spec/: trace-v0.1.md
src/agentrust_trace/: __init__.py  models.py  validate.py
src/agentrust_trace/schema/: trace-v0.1.json
tests/: test_models.py  test_sign.py  test_validate.py
