[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrust-trace"
version = "0.1.0"
description = "TRACE v0.1 — hardware-attested governance records for AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["trace", "tee", "attestation", "ai-governance", "confidential-computing", "rats", "eat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/agentrust-io/trace-spec"
Repository = "https://github.com/agentrust-io/trace-spec"
Issues = "https://github.com/agentrust-io/trace-spec/issues"
Changelog = "https://github.com/agentrust-io/trace-spec/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrust_trace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/agentrust_trace"]
